# opendk-MapEditor

./: .gitignore  CMakeLists.txt  README.md  build_msvc.cmd
COMMON/: CMakeLists.txt
FRLIB/: CAnimationFrame.cpp  CAnimationFrame.h  CAnimationFrameSetManager.cpp  CAnimationFrameSetManager.h  CCreatureFrameSetManager.cpp  CCreatureFrameSetManager.h  CFileIndexTable.h  CFrame.cpp  CFrame.h  CFramePack.cpp  CFramePack.h  CFrameSet.h  CFrameSetManager.cpp  CFrameSetManager.h  CMakeLists.txt  CSetManager.h  CSpriteSetManager.cpp  CSpriteSetManager.h  DrawTypeDef.H  FR.h  FR_PCH.H  TArray.h
SPLIB/: CFileIndexTable.cpp  CIndexSprite.cpp  CIndexSprite.h  CMakeLists.txt  CPalette.cpp  CPalette.h  CShadowsSprite.h  CSpriteBase.cpp  CSpriteBase.h  CSpritePalBase.cpp  CSpritePalBase.h  CTypePackVector.h  DrawTypeDef.H  PaleManager.cpp  PaleManager.h  SP.h  SP_PCH.h
maplib/: CMakeLists.txt  GameSector.cpp  GameSector.h  MAP_PCH.h  MAnimationObject.cpp  MAnimationObject.h  MImageObject.cpp  MImageObject.h  MObject.h  MString.cpp  MString.h  Zone.cpp  Zone.h  ZoneFileHeader.cpp  ZoneFileHeader.h  mObject.cpp
src/: CAnimationManager.cpp  CAnimationManager.h  CMakeLists.txt  MapCacheManager.cpp  MapCacheManager.h  MapLayerManager.cpp  MapLayerManager.h  ObjectRenderer2.cpp  ObjectRenderer2.h  SpreiteFrameMap.cpp  SpreiteFrameMap.h  TableGui.cpp  TableGui.h  TilePatternManager.cpp  TilePatternManager.h  d2dapp.cpp  d2dapp.h  gameapp.cpp  gameapp.h  imgui.ini  main.cpp
